client/public/index.css
html {
	--small-gap: 5px;
	--medium-gap: 10px;

	color: var(--font);

}

html[data-theme=dark] {
	--primary: #2c254f;
	--secondary: #594b9e;
	--tertiary: #8874ee;

	--neutral: #f6b248;
	--success: #c2f353;
	--warning: #cc931e;
	--error: #d64e3c;

	--font: #EDEDED;
}

* {
	[hidden] {
		display: none !important;
	}

	scrollbar-color: var(--secondary) var(--primary);
}

button[comp=channel-select]:is(.selected, :hover:not(:active)) {
	color: var(--primary);
	background: var(--neutral);
}

button[comp=channel-select] {
	background: var(--secondary);
	padding: var(--small-gap);
	border-radius: var(--small-gap);
	text-align: left;
	width: 100%;
}

body>div {
	height: 100%;
	width: 100%;
	display: flex;

}

body>div.poppup {
	top: 0;
	position: absolute;
	backdrop-filter: blur(5px);
}

form,
#profile-settings>div {
	margin: auto;
	background: var(--secondary);
	display: flex;
	gap: var(--small-gap);
	padding: var(--small-gap);
	flex-direction: column;
	border-radius: var(--small-gap);

	>input {
		border-radius: var(--small-gap);
	}

	>input:hover:not(:active) {
		background: var(--neutral);
	}

	>input:hover:not(:active)::placeholder {
		color: var(--secondary);
	}
}

::placeholder {
	color: var(--tertiary);
}

button {
	background: var(--primary);
	border: none;
	padding: var(--medium-gap);
	border-radius: var(--medium-gap);
	color: var(--font);
}

button:hover:not(:active) {
	background: var(--neutral);
	color: var(--primary);
}

input {
	padding: var(--small-gap);
	background: var(--primary);
	outline: none;
	border: none;
	color: var(--primary);
}

input:not(:hover) {
	color: var(--font);
}

[comp=voice-view] {
	button {
		padding: 0;
		border-radius: 0;
		color: var(--font);
		background: none;
	}

	button:hover:not(:active) {
		background: none;
		color: var(--error);
	}

	button.disabled {
		color: var(--error);
		background: none;
		padding: 0;
	}

	button.disabled:hover:not(:active) {
		background: none;
		color: var(--font);
	}
}

[comp=voice-pane] {
	--width: 250px;
	--height: 175px;
	--outline-time: 0.5s;

	width: var(--width);
	height: var(--height);
	display: flex;
	background: var(--neutral);
	overflow: hidden;
	border-radius: var(--medium-gap);
	transition:
		outline var(--outline-time) ease-out,
		outline-offset var(--outline-time) ease-out;
	outline: 0px solid transparent;
	outline-offset: 6px;
	color: var(--primary);

	video {
		width: var(--width);
		height: var(--height);
		border-radius: var(--medium-gap);
	}

	svg.hidden {
		opacity: 0;
	}
}

[comp=voice-pane].has-video {
	color: var(--font);
}

[comp=voice-pane].talking {
	--outline-time: 0.03s;

	transition:
		outline var(--outline-time) ease-in,
		outline-offset var(--outline-time) ease-in;
	outline: 6px solid var(--tertiary);
	outline-offset: 0px;
}

button.toggle-voice {
	background: none;
	border-radius: 0;
	color: var(--font);
}

button.toggle-voice:hover:not(:active) {
	color: var(--neutral);
	background: none;
}

.toast {
	position: absolute;
	height: fit-content;
	width: fit-content;
	transition: transform 0.4s;
	transform: scale(0);
	z-index: 1;
	right: 0;
	background: var(--error);
	padding: var(--small-gap);
	margin: var(--small-gap);
	max-width: 200px;
	overflow-wrap: break-word;
}

